// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`command/help > should display a empty help command if no commands exists 1`] = `
[MockFunction] {
  "calls": [
    [
      [
        {
          "content": "{cyan testcli} {green <command>} [positional arguments] {yellow [options]}",
          "header": "{inverse.cyan  Usage }",
        },
        {
          "header": "{inverse.yellow  Global Options }",
          "optionList": [
            {
              "description": "Turn on verbose output",
              "group": "global",
              "name": "verbose",
              "type": [Function],
            },
            {
              "description": "Turn on debugging output",
              "group": "global",
              "name": "debug",
              "type": [Function],
            },
            {
              "alias": "h",
              "description": "Print out helpful usage information",
              "group": "global",
              "name": "help",
              "type": [Function],
            },
            {
              "alias": "q",
              "description": "Silence output",
              "group": "global",
              "name": "quiet",
              "type": [Function],
            },
            {
              "alias": "V",
              "description": "Print version info",
              "group": "global",
              "name": "version",
              "type": [Function],
            },
            {
              "description": "Turn off colored output",
              "group": "global",
              "name": "no-color",
              "type": [Function],
            },
            {
              "description": "Force colored output",
              "group": "global",
              "name": "color",
              "type": [Function],
            },
          ],
        },
        {
          "content": "Run "{cyan testcli} {green help <command>}" or "{cyan testcli} {green <command>} {yellow --help}" for help with a specific command.",
          "raw": true,
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`command/help > should display aliases if present 1`] = `
[MockFunction] {
  "calls": [
    [
      [
        {
          "content": "{cyan testcli} {green commandWithAlias}",
          "header": "{inverse.cyan  Usage }",
        },
        {
          "content": [
            "cwa",
            "aliasForCommand",
          ],
          "header": "Alias(es)",
        },
        {
          "header": "{inverse.yellow  Global Options }",
          "optionList": [
            {
              "description": "Turn on verbose output",
              "group": "global",
              "name": "verbose",
              "type": [Function],
            },
            {
              "description": "Turn on debugging output",
              "group": "global",
              "name": "debug",
              "type": [Function],
            },
            {
              "alias": "h",
              "description": "Print out helpful usage information",
              "group": "global",
              "name": "help",
              "type": [Function],
            },
            {
              "alias": "q",
              "description": "Silence output",
              "group": "global",
              "name": "quiet",
              "type": [Function],
            },
            {
              "alias": "V",
              "description": "Print version info",
              "group": "global",
              "name": "version",
              "type": [Function],
            },
            {
              "description": "Turn off colored output",
              "group": "global",
              "name": "no-color",
              "type": [Function],
            },
            {
              "description": "Force colored output",
              "group": "global",
              "name": "color",
              "type": [Function],
            },
          ],
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`command/help > should display group of commands if the group option is passed 1`] = `
[MockFunction] {
  "calls": [
    [
      [
        {
          "content": "{cyan testcli} {green <command>} [positional arguments] {yellow [options]}",
          "header": "{inverse.cyan  Usage }",
        },
        {
          "content": [
            [
              "{green test} ",
              "A test command",
            ],
            [
              "{green test2} ",
              "A test2 command",
            ],
          ],
          "header": "{inverse.green  Available Test Commands }",
        },
        {
          "header": "{inverse.yellow  Global Options }",
          "optionList": [
            {
              "description": "Turn on verbose output",
              "group": "global",
              "name": "verbose",
              "type": [Function],
            },
            {
              "description": "Turn on debugging output",
              "group": "global",
              "name": "debug",
              "type": [Function],
            },
            {
              "alias": "h",
              "description": "Print out helpful usage information",
              "group": "global",
              "name": "help",
              "type": [Function],
            },
            {
              "alias": "q",
              "description": "Silence output",
              "group": "global",
              "name": "quiet",
              "type": [Function],
            },
            {
              "alias": "V",
              "description": "Print version info",
              "group": "global",
              "name": "version",
              "type": [Function],
            },
            {
              "description": "Turn off colored output",
              "group": "global",
              "name": "no-color",
              "type": [Function],
            },
            {
              "description": "Force colored output",
              "group": "global",
              "name": "color",
              "type": [Function],
            },
          ],
        },
        {
          "content": "Run "{cyan testcli} {green help <command>}" or "{cyan testcli} {green <command>} {yellow --help}" for help with a specific command.",
          "raw": true,
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`command/help > should print general help 1`] = `
[MockFunction] {
  "calls": [
    [
      [
        {
          "content": "{cyan testcli} {green <command>} [positional arguments] {yellow [options]}",
          "header": "{inverse.cyan  Usage }",
        },
        {
          "content": [
            [
              "{green test} ",
              "A test command",
            ],
          ],
          "header": " {inverse.green  Test }",
        },
        {
          "header": "{inverse.yellow  Global Options }",
          "optionList": [
            {
              "description": "Turn on verbose output",
              "group": "global",
              "name": "verbose",
              "type": [Function],
            },
            {
              "description": "Turn on debugging output",
              "group": "global",
              "name": "debug",
              "type": [Function],
            },
            {
              "alias": "h",
              "description": "Print out helpful usage information",
              "group": "global",
              "name": "help",
              "type": [Function],
            },
            {
              "alias": "q",
              "description": "Silence output",
              "group": "global",
              "name": "quiet",
              "type": [Function],
            },
            {
              "alias": "V",
              "description": "Print version info",
              "group": "global",
              "name": "version",
              "type": [Function],
            },
            {
              "description": "Turn off colored output",
              "group": "global",
              "name": "no-color",
              "type": [Function],
            },
            {
              "description": "Force colored output",
              "group": "global",
              "name": "color",
              "type": [Function],
            },
          ],
        },
        {
          "content": "Run "{cyan testcli} {green help <command>}" or "{cyan testcli} {green <command>} {yellow --help}" for help with a specific command.",
          "raw": true,
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
